# checkAUR

./: .gitignore  LICENSE.md  pyproject.toml
src/checkAUR/: __init__.py  __main__.py  aur_path.py  check_rebuild.py  check_user.py  compare_packages.py  pacman.py  use_git.py
src/checkAUR/common/: custom_logging.py  data_classes.py  exceptions.py  package.py
src/checkAUR/scripts/: run.py
tests/: conftest.py
tests/units/: test_aur_path.py  test_check_rebuild.py  test_compare_packages.py  test_use_git.py  test_user_id.py
