[project]
name = "checkAUR"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "GitPython",
  "dotenv",
  "pyperclip"
]

[project.scripts]
checkAUR = "checkAUR.scripts.run:main_cli"

[tool.uv]
environments = [ "sys_platform = 'linux'" ]

[project.optional-dependencies]
dev = [
  "pytest"
]