[project]
name = "checkAUR"
requires-python = ">=3.12"
version = "0.2.0"
license = "MIT"
dependencies = [
  "GitPython",
  "dotenv",
  "pyperclip"
]

[project.scripts]
checkAUR = "checkAUR.scripts.run:main_cli"

[tool.uv]
environments = [ "sys_platform = 'linux'" ]

[project.optional-dependencies]
dev = [
  "pytest"
]