[project]
name = "checkAUR"
authors = [
  { name = "Åukasz Kozak", email = "lakis.kozak@gmail.com" }
]
requires-python = ">=3.12"
dynamic = ["version"]
license = "MIT"
dependencies = [
  "GitPython",
  "dotenv",
  "pyperclip"
]

[project.urls]
Homepage = "https://github.com/CossackLucas/checkAUR"

[project.scripts]
checkAUR = "checkAUR.scripts.run:main_cli"

[tool.uv]
environments = [ "sys_platform = 'linux'" ]

[tool.setuptools.dynamic]
version = { attr = "checkAUR.__version__" }

[project.optional-dependencies]
dev = [
  "pytest"
]